--- a/module-2/Index.html
+++ b/module-2/Index.html
@@ -5,6 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bws Module-2</title>
+    <style>
+        img{
+            width: 100px;
+            height: 100px;
+            border-radius: 12px;
+        }
+
+        body{
+            text-align: center;
+            color: rgb(99, 6, 248);
+            text-shadow: 0px 0px 10px rgb(21, 255, 0);
+            background-color: antiquewhite;
+        }
+        
+    </style>
 </head>
 <body>
     <h1>Bws Web-Dev Intern</h1>
